SCRUM-73 adjusted button overlay z-index to fix bug

--- a/resume-copilot/src/components/LeftBar.css
+++ b/resume-copilot/src/components/LeftBar.css
@@ -4,6 +4,7 @@
     /* border-bottom-right-radius: 10px; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #282c34;
+    z-index: 1000;
 }
 
 .prevRes {
